k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: eks-demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: eks-demo

  template:
    metadata:
      labels:
        app: eks-demo

    spec:
      containers:
        - name: eks-demo
          image: 144999876473.dkr.ecr.us-east-1.amazonaws.com/eks-test:latest

          ports:
            - containerPort: 3000
