k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: eks-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: eks-backend-service
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-frontend-service
                port:
                  number: 80
